<resources>
    <string name="app_name">Online vonatjegy foglaló alkalmazás</string>
    <string name="cegnev">Magyar Ásító Vonatok (MÁV)</string>
    <string name="jelszo">Jelszó</string>
    <string name="felhasznalonev">Felhasználónév</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="m_r_van_fi_kom">Már van fiókom.</string>
    <string name="emailcim">Email cím</string>
    <string name="teljes_nev">Teljes név</string>
    <string name="jelszo_megegyszer">Jelszó mégegyszer</string>
    <string name="szuletesi_datum">Születési dátum:</string>
    <string name="jegyfoglalas">Jegyfoglalás</string>
    <string name="honnan">Honnan?</string>
    <string name="meglevojegyek">Meglévő jegyek</string>
    <string name="hova">Hova?</string>
    <string name="mikor">Mikor?\n</string>
    <string name="vissza">Vissza\n</string>
    <string name="ar">0 ft</string>
    <string name="valassz_datumot">Válassz dátumot\n</string>
</resources>