<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".meglevoJegyek"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="@color/blue_light"
    >
    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/meglevojegyekTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/meglevojegyek"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="28sp" />

<TableRow
    android:layout_width="match_parent"
    android:textAlignment="center">

    <TextView
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/honnan"
        android:textColor="@color/black"
        android:padding="3dip" />

    <TextView

        android:layout_width="0dp"
        android:padding="3dip"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/hova"
        android:textAlignment="center" />
    <TextView

        android:layout_width="0dp"
        android:padding="3dip"
        android:layout_weight="1"
        android:text="@string/mikor"
        android:textColor="@color/black"
        android:textAlignment="center" />
</TableRow>

<TableRow>
    <TextView
        android:text="proba1"
        android:padding="3dip"
        android:layout_width="0dp"
        android:layout_weight="1"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="proba2"
        android:padding="3dip" />
    <TextView

        android:padding="3dip"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="probaido"
        android:textAlignment="center" />
</TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/visszaButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5pt"
            android:text="@string/vissza"
            android:textColor="@color/white" />
    </LinearLayout>
</TableLayout>
